crates/xlate/tests/snapshots/golden_matrix__reason_effort_none__o4-mini__20260910__chat_to_responses__gpt5_responses.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "What is 2+2?"
        }
      ]
    }
  ],
  "reasoning": {
    "effort": "none"
  },
  "max_output_tokens": 128
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
